--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ table.shtable tr td input {
     <h2>Background</h2>
     <hr>
 
-<p><em><strong>Love Live! School Idol Festival</strong></em> is an popular mobile rytheme game, also part of the <a href="">Love Live! School Idol Project</a>, a multi-media project including TV animes, musics and lives, so on and also the mobile game. Our Shiny-app is designed as a <em><strong>helper tool</strong></em> for the players of this game.<br>
+<p><em><strong>Love Live! School Idol Festival</strong></em> is an popular mobile rhythm game, also part of the <a href="">Love Live! School Idol Project</a>, a multi-media project including TV animes, musics and lives, so on and also the mobile game. Our Shiny-app is designed as a <em><strong>helper tool</strong></em> for the players of this game.<br>
 As common <em><strong>rytheme game</strong></em>, hitting the note too late or early will break the combo, while combo number gives extra bonus in the game. But in Love Live SIF, cards of different characters may have skills which can add effect to the team to loosen the miss criterion. And these cards have such type of skill are called <em><strong>perfect-lockers</strong></em>.<br>
 Our shiny-app is aimed to choose from perfect-locker cards having <em><strong>different parameters</strong></em> (yell intervals, success rates and effect durations) the user has, to organize a best team that maximize the overall probability of having the effect during a live.</p>
 
@@ -163,7 +163,7 @@ Our shiny-app is aimed to choose from perfect-locker cards having <em><strong>di
 
 <p><p/></p>
 
-<p>First, users need to select cards he/she has from the given list. Above is part of the list, which is accually a customed <code>checkboxGroupInput()</code>. The checkboxes are located on the first column in the list before the ID number, and set the hidden using additional <strong>javascript</strong>. Click (<em><strong>you can try it here</strong></em>) the row will check the coressponding box, which is also defined in the <strong>javascript</strong>, and render the input via <strong>jQuery</strong> <code>.trigger(&quot;change&quot;)</code>.</p>
+<p>First, users need to select cards he/she has from the given list. Above is part of the list, which is accually a customed <code>checkboxGroupInput()</code>. The checkboxes are located on the first column in the list before the ID number, and set the hidden using additional <strong>javascript</strong>. Click (<em><strong>you can try it here</strong></em>) the row will check the corresponding box, which is also defined in the <strong>javascript</strong>, and render the input via <strong>jQuery</strong> <code>.trigger(&quot;change&quot;)</code>.</p>
 
   </div>
 </section>
